--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <version>3.0.1-b06</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
