--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/Entity
+spring.datasource.url=jdbc:postgresql://localhost:5432/marathon
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=qwerty123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
